# SPACE_INV_8080_EMULATOR

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp  resources.qrc
disassembler/: disassembler.c  disassembler.h
emulator/: emulator.c  emulator.h  emulatorWrapper.cpp  emulatorWrapper.h  io_bits.h  ioports_t.h  t_ioports.h
emulator.dSYM/Contents/Resources/Relocations/aarch64/: emulator.yml
i8080-emulator/: disassembler.c  emulator.c  emulator.h
inputmanager/: debugwrapper.cpp  debugwrapper.h  inputManager.cpp  inputManager.h  keymap.h  romassembler.cpp  romassembler.h
memory/: mem_utils.c  mem_utils.h  memory.c  memory.h
outputmanager/: audiomixer.cpp  audiomixer.h  outputManager.cpp  outputManager.h  videoemulator.c  videoemulator.cpp  videoemulator.h
sounds/: convertMp3Wav.bat
ui/: glwidget.cpp  glwidget.h  instructions.cpp  instructions.h  instructions.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixelwidget.cpp  pixelwidget.h  setkeydialog.cpp  setkeydialog.h  setkeydialog.ui  settings.cpp  settings.h  settings.ui
